# kortana

./: .gitignore  README.md  pyproject.toml  setup_codex.sh
docs/: ARCHITECTURE.md  AUDIT.md  ROADMAP.md
kortana/: __init__.py  agents.py  cli.py  events.py  orchestrator.py  planning.py  registry.py  storage.py  tasks.py
tests/: test_orchestrator.py  test_tasks.py
